update method get books by isbn in service