@@ -7,10 +7,12 @@ import org.springframework.stereotype.Service;
 import org.springframework.web.reactive.function.client.WebClient;
 import org.springframework.web.server.ResponseStatusException;
 
-import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
+
+import static java.util.Objects.requireNonNull;
 
 @Service
 public class BookService {
@@ -26,47 +28,54 @@ public class BookService {
         this.webClient = WebClient.create(apiUrl);
     }
 
-
     String maxResults = "&maxResults=5";
 
 
 
-    // Todo: 3 unittest: findet, nicht findet leere array, ungültige isbn
-    public List<Book> getApiBookByIsbn(String isbn) throws ResponseStatusException {
-        ResponseEntity<BookResponseElement> bookResponse = webClient
+    public BookResponseElement getApiBookByIsbn(String isbn) throws ResponseStatusException {
+        ResponseEntity<BookResponseElement> bookResponse = requireNonNull(webClient
                 .get()
                 .uri("?q=isbn:" + isbn + "&key=" + apiKey)
-//                .uri("https://www.googleapis.com/books/v1/volumes?q=javascript&key=AIzaSyBp5xzV9nlcvQsRKCVm09RAaprMA9H2Q9Q&maxResults=10")
                 .retrieve()
                 .toEntity(BookResponseElement.class)
-                .block();
-        System.out.println("BOOK Response" + bookResponse);
-        if (bookResponse.getBody().bookItems().size() == 0) {
-            return new ArrayList<>();
-        }
-        return Optional.ofNullable(bookResponse)
+                        .block(), "ResponseEntity is null");
+
+        List<Book> books = Optional.ofNullable(bookResponse)
                 .map(HttpEntity::getBody)
+                .filter(body -> body.totalItems() >= 1)
                 .map(BookResponseElement::bookItems)
-                .map(bookList -> bookList.stream()
-                        .filter(book -> book.volumeInfo()
-                                .industryIdentifiers()
-                                .stream()
-                                .anyMatch(isbn1 -> isbn1.identifier()
-                                        .equals(isbn)))
-                        .collect(Collectors.toList()))
-                .orElseThrow(() -> new NoBookFoundException("No books could be found"));
+                .stream()
+                .flatMap(Collection::stream)
+                .filter(item ->item.volumeInfo()
+                        .industryIdentifiers()
+                        .stream()
+                        .anyMatch(isbn1 -> isbn.equals(isbn1.identifier())))
+                .toList();
+        return new BookResponseElement(bookResponse.getBody().totalItems(), books);
+
+/*        List<Book> books = Optional.ofNullable(bookResponse)
+                .map(HttpEntity::getBody)
+                .filter(body -> body.totalItems() >= 1)
+                .map(body -> {
+                    if(body.totalItems() == 1) {
+                        return body.bookItems();
+                    } else {
+                        throw new IsbnException("More then one book with the same isbn found");
+                    }
+                })
+                .stream()
+                .flatMap(bookItems -> bookItems.stream())
+                .filter(item ->item.volumeInfo()
+                        .industryIdentifiers()
+                        .stream()
+                        .anyMatch(isbn1 -> isbn.equals(isbn1.identifier())))
+                .toList();*/
 
     }
 
-    public Book saveBookInDB(Book book) {
-        return bookRepository.save(book);
-    }
 
-    public List<Book> getAllBooks() {
-        return bookRepository.findAll();
-    }
 
-    public List<Book> getAllApiBooks(String searchText) {
+    public BookResponseElement getAllApiBooks(String searchText) {
         ResponseEntity<BookResponseElement> bookResponse = webClient
                 .get()
                 .uri("?q=" + searchText + "&key=" + apiKey + maxResults)
@@ -74,21 +83,30 @@ public class BookService {
                 .toEntity(BookResponseElement.class)
                 .block();
 
-/*        System.out.println("BOOK Response" + bookResponse);
-        if (bookResponse.getBody().bookItems().size() == 0) {
-            return new ArrayList<>();
-        }
+        System.out.println("BOOK Response" + bookResponse);
         System.out.println("BODY Response" + bookResponse.getBody());
-        return Optional.ofNullable(bookResponse)
+
+
+        List<Book> books = Optional.ofNullable(bookResponse)
+                .map(HttpEntity::getBody)
+                .map(BookResponseElement::bookItems)
+                .map(bookList -> bookList.stream()
+                        .collect(Collectors.toList()))
+                .orElseThrow(() -> new NoBookFoundException("No books could be found"));
+        return new BookResponseElement(bookResponse.getBody().totalItems(), books);
+
+
+
+/*        return Optional.ofNullable(bookResponse)
                 .map(HttpEntity::getBody)
                 .map(BookResponseElement::bookItems)
                 .map(bookList -> bookList.stream()
                         .collect(Collectors.toList()))
                 .orElseThrow(() -> new NoBookFoundException("No books could be found"));*/
+    }
 
 
-
-        BookResponseElement responseBody;
+/*        BookResponseElement responseBody;
         System.out.println("BOOK Response" + bookResponse);
 
         if (bookResponse != null) {
@@ -100,9 +118,15 @@ public class BookService {
         if (responseBody != null) {
             return responseBody.bookItems();
         } else throw new BookResponseException("Response body is null");
+    }*/
+
+
+    public Book saveBookInDB(Book book) {
+        return bookRepository.save(book);
     }
 
-
-
+    public List<Book> getAllBooks() {
+        return bookRepository.findAll();
+    }
 
 }
